--- a/css/shop.css
+++ b/css/shop.css
@@ -249,11 +249,11 @@ table{
 }
 
 .achatBouton {
-	margin-top: 30px;
+	margin-top: 10px;
 	width: 480px;
 	height: 50px;
 	font-size: 18px;
-	background-color: white;
+	background-color: black;
 	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.4), 0 6px 20px 0 rgba(0,0,0,0.19);
 	border-radius: 8px;
 	border: 2px;
