--- a/partials/shop.html
+++ b/partials/shop.html
@@ -99,7 +99,7 @@
                    </select>
                 </li>
                 <li>
-                    <a class="ajouterCarte" data-toggle="modal" data-target="#achatCarte" data-toggle="dropdown" role="button" ng-switch = "textAjoute()" ng-show="fondAAjoute.length> 0">
+                    <a class="ajouterCarte" data-toggle="modal" data-target="#achatCarte" data-toggle="dropdown" role="button" ng-switch = "textAjoute()" ng-show="fondAAjoute.length> 0" ng-click="achat = true">
                         <div ng-switch-when = false>Ajouter cette carte</div> 
                         <div ng-switch-when = true> Ajouter ces &nbsp{{fondAAjoute.length}}&nbsp cartes</div>
                     </a>
@@ -150,24 +150,24 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     <center>
                         <p class="achatTitle">Achat de cartes premium</p>
-                        
-                        
-                        <p class="achatCarte"> Vous avez choisit {{fondAAjoute.length}} carte(s), vous avez &nbsp {{getCredits}} &nbsp crédit(s)
+                        <div>
+                        <p class="achatCarte" ng-show="achat"> Vous avez choisit {{fondAAjoute.length}} carte(s), vous avez &nbsp {{getCredits}} &nbsp crédit(s)
                         </p>
-
-                        <p class="achatCarte"> Vous restez &nbsp {{resteCredits}} &nbsp crédit(s)
+                        <p class="achatCarte" ng-show="!achat"> Vous restez &nbsp {{resteCredits}} &nbsp crédit(s)
                         </p>
+                        </div>
 
                         <h5 style="color:white"> * 1 credit = 1 carte </h5>
                         <p>
                         <button class="achatBouton" ng-click="calculCredits()"> Achtez avec vos crédits</button>
                         </p> 
+                        <h5 style="color:red">{{err.message}}</h5>
 
                         <p class="achatCarte" ng-click="formule='formule3'"> {{fondAAjoute.length}} carte premium au choix &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp {{prix}} €
                         </p>
 
                         <button class="achatBouton">Achetez avec Paypal</button>
-                        <p class="achatPied">Ou ajoutez &nbsp <span class="resteCarte">{{50-fondAAjoute.length}}</span>&nbsp contacts pour bénéficier d'un fond de carte gratuit</p>
+                        <p class="achatPied">Ou ajoutez &nbsp <span class="resteCarte">{{50-countCardShared}}</span>&nbsp contacts pour bénéficier d'un fond de carte gratuit</p>
                         
                      </center>
             </div>
