--- a/partials/signIn.html
+++ b/partials/signIn.html
@@ -1,6 +1,12 @@
 <div class="container">
 	<div class="row" id="rowSign">
 	<div class="row col-lg-5" id="cardPerso">
+		<div style="color: black">
+			<ivicard card="user.first_name"></ivicard>
+			<h1 >test</h1>
+			<span>{{user}}</span>
+		</div>
+
 		<div>
 			<div id="cardProfil">
 				<span>
