--- a/partials/store.html
+++ b/partials/store.html
@@ -7,7 +7,7 @@
 	<list 
 	ng-repeat="card in cards">
 		<ul>
-			{{card._sender.first_name}}
+			<ivicard card="card"></ivicard>
 		</ul>
 		
 	</list>
