--- a/templates/aside.search.html
+++ b/templates/aside.search.html
@@ -8,9 +8,8 @@
       <div class="aside-body" ng-show="cards">
         <input ng-model="contacts_filter">
         <!-- <pre> {{cards | json }}</pre> -->
-        <div class="card-container" ng-repeat="card in cards | filter:contacts_filter">
+        <div class="card-container" ng-repeat="card in cards | filter : filterFunction">
           <ivicard card="card"></ivipulse>
-          nom : {{card._sender.first_name}}
         </div>
         
       </div>
