--- a/css/store.css
+++ b/css/store.css
@@ -2,13 +2,23 @@
 	height: 100px;
 	width: 680px;
 
-	opacity: 1;
-	transition: 0.3s;
-
 }
 .card.background{
-	width: 100%;
-	background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 90px); /* w3c */
-
+	
+	background-size: 100%;
+	
+}
+	.card.background::before {
+		content: '';
+     	position: absolute;
+     	top: 0;
+     	left: 0;
+     	right: 0;
+      	bottom: 0;
+      	background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 90px);
+		
+	}
+.card.background.grad {
+	
 }
 
