--- a/partials/shop.html
+++ b/partials/shop.html
@@ -4,6 +4,9 @@
 <!-- boutton modal personnliser carte -->
    <center><button class="personaliserCarte" data-toggle="modal" data-target="#myModal">Faites personnaliser votre carte &nbsp &nbsp<span class = "glyphicon glyphicon-arrow-right" aria-hidden="true"></span> 
     </button></center> 
+   <div>
+      avatar {{user.avatar}}
+   </div>
 
 <!-- modal Personnaliser carte -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -111,7 +114,7 @@
             <ul class="hide-bullets" > 
                 <li class="col-sm-3" ng-repeat = 'template in listCards'> 
                     <a class="thumbnail card {{template}}" id="carousel-selector-{{template}}" data-toggle="modal" data-target="#openFond" ng-click="setCurrentTemplate(template)">
-                        <img class = "imgAvatar" src="img/avatar/abcd.jpg" alt="imgAvatar">
+                        <img class = "imgAvatar" src="user.avatar" alt="imgAvatar">
                         <div ng-switch = "isAdded(template)" ng-click = "ajouteFond(template)">
                             <img  ng-switch-when=false class="plusOkIcon" src="img/plus.jpg" alt="plus">   
                             <img ng-switch-when=true class="plusOkIcon" src="img/ok.jpg" alt="ok"> 
@@ -126,7 +129,7 @@
         <div class="modal-dialog modalOpen" role="document">
             <div class="modal-content">
                 <div class="modal-header2">
-                    <img class ="imgAvatarM" src="img/avatar/abcd.jpg" alt="imgAvatarM">
+                    <img class ="imgAvatarM" src="user.avatar" alt="imgAvatarM">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span></button>
                 </div>
@@ -151,7 +154,7 @@
                     <center>
                         <p class="achatTitle">Achat de cartes premium</p>
                         <div>
-                        <p class="achatCarte" ng-show="achat"> Vous avez choisit &nbsp {{fondAAjoute.length}} &nbsp carte(s), vous avez &nbsp {{getCredits}} &nbsp crédit(s)
+                        <p class="achatCarte" ng-show="achat"> Vous avez choisit &nbsp{{fondAAjoute.length}}&nbsp carte(s), vous avez &nbsp {{getCredits}} &nbsp crédit(s)
                         </p>
                         <p class="achatCarte" ng-show="!achat"> Vous restez &nbsp {{resteCredits}} &nbsp crédit(s)
                         </p>
