--- a/templates/aside.search.html
+++ b/templates/aside.search.html
@@ -5,10 +5,10 @@
         <button type="button" class="close" ng-click="$hide()">&times;</button>
         <h4 class="aside-title">Contacts</h4>
       </div>
-      <div class="aside-body" ng-show="cards">
+      <div class="aside-body">
         <input ng-model="contacts_filter">
         <!-- <pre> {{cards | json }}</pre> -->
-        <div class="card-container" ng-repeat="card in cards | filter : filterFunction">
+        <div class="card-container" ng-repeat="card in cards | searchContactsFilter:contacts_filter">
           <ivicard card="card"></ivipulse>
         </div>
         
