--- a/partials/store.html
+++ b/partials/store.html
@@ -8,6 +8,7 @@
 	ng-repeat="card in cards">
 		<ul>
 			<ivicard card="card"></ivicard>
+			<div>adresse de l'avatar : {{card._sender.avatar}}</div>
 		</ul>
 		
 	</list>
