--- a/css/_login.css
+++ b/css/_login.css
@@ -3,3 +3,27 @@
 	margin-left: 400px;
 	margin-right: 400px;
 }
+
+.head-title{
+	background-color: #20c7a1 !important;
+}
+.btn {
+	box-shadow: 0 1px 1px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+.button-login{
+	background-color: #20c7a1 !important;
+}
+
+.main-login{
+	background-image: url(../img/splash.jpg);
+
+	padding-bottom: 30px !important;
+	padding-top: 30px !important;
+}
+
+login-element {
+	margin: 30px, 20px, 30px, 50px;
+}
+
+.div1 {
+}
