--- a/partials/login.html
+++ b/partials/login.html
@@ -1,5 +1,50 @@
-<section align="center" style="background-image: url(../img/header.jpg);">
-	<h2 style = "margin-top: 120px">Connexion par email</h1>
+<section align="center">
+<div class="container">
+<div class="row div1">
+              <div class="col-md-offset-4 col-md-4 main-login">
+                <span class="textLogin login-element">Login via</span>
+                <div class="social-buttons">
+                  <a href="#" class="btn btn-fb  login-element">Login via</span>
+                <div class="social-buttons">"><i class="fa fa-facebook"></i> Facebook</a>
+                  <a href="#" class="btn btn-tw"><i class="fa fa-twitter"></i> Twitter</a>
+                </div>
+                                ou
+                 <div>
+                    <div class="form-group">
+                       <label class="sr-only" for="exampleInputEmail2">Email</label>
+                       <input 
+                       ng-model="user.email"
+                       type="email" class="form-control" id="exampleInputEmail2" placeholder="Email address" required>
+                    </div>
+                    <div class="form-group">
+                       <label class="sr-only" for="exampleInputPassword2">Password</label>
+                       <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required
+                       ng-model="user.password">
+                       <input type="password" 
+                       ng-show="state.mode=='inscription'"
+                       ng-model="password_check"
+                       class="form-control" placeholder="Password" required>
+                    </div>
+                    <div class="form-group">
+                       <button 
+                       ng-show="state.mode =='connexion'"
+                       class="btn btn-block button-login" ng-click="email_login();$event.stopPropagation()">Login</button>
+                       <button 
+                       ng-show="state.mode =='inscription'"
+                       class="btn btn-block button-login" ng-click="email_signin();$event.stopPropagation()">S'inscrire</button>
+                    </div>
+                 </div>
+                 <div class="bottom text-center">
+	                <button class="btn btn-sm button-login" ng-click="state.mode = 'connexion';$event.stopPropagation()"><b>Se connecter</b></button>
+	                <button class="btn btn-sm button-login" ng-click="state.mode = 'inscription';$event.stopPropagation()"><b>S'inscrire</b></button>
+	              </div>
+              </div>
+              
+           </div>
+        </div>
+
+
+	<!-- <h2 style = "margin-top: 120px">Connexion par email</h1>
 			<table class="connexion" align="center" style = "padding: 20px; margin-top: 10px;">
 				<tr style = "padding: 20px">
 					<td>
@@ -52,5 +97,5 @@
 		<div ng-repeat="card in user.cards">
 			<a class="card background" ng-class="card.background = '{{card._sender.template}}'" >
 
-		carte : {{card | json}}</a></div>
+		carte : {{card | json}}</a></div> -->
 </section>
