--- a/templates/aside.login.html
+++ b/templates/aside.login.html
@@ -1,8 +1,7 @@
 <div class="aside" tabindex="-1" role="dialog" ng-controller="login_ctrl">
   <div class="aside-dialog">
     <div class="aside-content">
-      <div class="aside-header">
-        <button type="button" class="close" ng-click="$hide()">&times;</button>
+      <div class="aside-header head-title">
         <h4 class="aside-title">Login</h4>
       </div>
       <div class="aside-body">
@@ -18,7 +17,7 @@
                     <div class="form-group">
                        <label class="sr-only" for="exampleInputEmail2">Email</label>
                        <input 
-                       ng-model="user.mail"
+                       ng-model="user.email"
                        type="email" class="form-control" id="exampleInputEmail2" placeholder="Email address" required>
                     </div>
                     <div class="form-group">
@@ -28,29 +27,23 @@
                        <input type="password" 
                        ng-show="state.mode=='inscription'"
                        ng-model="password_check"
-                       class="form-control" placeholder="Password" required
-                       >
-                                             <div class="help-block text-right"><a href="">Forget the password ?</a></div>
+                       class="form-control" placeholder="Password" required>
                     </div>
                     <div class="form-group">
                        <button 
                        ng-show="state.mode =='connexion'"
-                       class="btn btn-primary btn-block" ng-click="email_login();$event.stopPropagation()">Login</button>
+                       class="btn btn-block button-login" ng-click="email_login();$event.stopPropagation()">Login</button>
                        <button 
                        ng-show="state.mode =='inscription'"
-                       class="btn btn-primary btn-block" ng-click="email_signin();$event.stopPropagation()">S'inscrire</button>
+                       class="btn btn-block button-login" ng-click="email_signin();$event.stopPropagation()">S'inscrire</button>
                     </div>
                  </div>
               </div>
               <div class="bottom text-center">
-                <button ng-click="state.mode = 'connexion';$event.stopPropagation()"><b>Se connecter</b></button>
-                <button ng-click="state.mode = 'inscription';$event.stopPropagation()"><b>S'inscrire</b></button>
+                <button class="btn btn-sm button-login" ng-click="state.mode = 'connexion';$event.stopPropagation()"><b>Se connecter</b></button>
+                <button class="btn btn-sm button-login" ng-click="state.mode = 'inscription';$event.stopPropagation()"><b>S'inscrire</b></button>
               </div>
            </div>
-      </div>
-      <div class="aside-footer">
-        <button type="button" class="btn btn-default" ng-click="$hide()">Close</button>
-        <button type="button" class="btn btn-primary" ng-click="$hide()">Save changes</button>
       </div>
     </div>
   </div>
