--- a/partials/signIn.html
+++ b/partials/signIn.html
@@ -755,7 +755,7 @@
                    <input class="form-control" name="birthday" ng-model="user.birth_date" bs-datepicker type="text" language="fr" data-format="dd-mmmm-yyyy" placeholder="Date de naissance"  />
             	</div>
             </div>
-	        <button class="btn btn-sg btn-default btn-block" type="button" ng-click="update()">
+	        <button class="btn btn-sg btn-default btn-block" type="submit" ng-click="update()">
                 Valider</button>        
 	 	</form>
 	</div>
