--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,21 @@
 body{
     background-color: #50E3C2;
-    padding:50px;
     width:100%;
 
+}
+
+
+
+.barre {
+    background-color: black;
+}
+
+.navigbarre {
+    background-color: #20c7a1;
+    margin-bottom: 0px;
+}
+.nav-bar{
+    margin-bottom: 0px;
 }
 
 #login-dp{
