--- a/partials/login.html
+++ b/partials/login.html
@@ -1,5 +1,57 @@
-<section align="center" style="background-image: url(../img/header.jpg);">
-	<h2 style = "margin-top: 120px">Connexion par email</h1>
+<section >
+<div >
+<table class="fondInscrit">
+<tr >
+	<td class="left">
+	    <img class="logo" src="../img/icon-ivipulse.png">
+	</td>
+	<td class="middle">
+		<img class="logoText" src="../img/ivipulse.png">
+	</td>
+	<td class="right">
+		<div class="champInscrit">
+		  	<br><br><br>
+		    <div class="text">Login via</div> 
+		    <br>
+			  <div class="social-buttons">
+			  	<a href="#" class="btn btn-tw socialButton">
+			  	<i class="fa fa-facebook"></i> 
+				Facebook</a>
+				<a href="#" class="btn btn-tw socialButton">
+				<i class="fa fa-twitter"></i> 
+				witter</a>
+				</div>
+				<br><br>
+				<div class="text">ou</div>
+				<br>
+		        <div class="form-group">
+		           <label class="sr-only" for="exampleInputEmail2">Email</label>
+		           <input ng-model="user.email" type="email" class="form-control champOnly" id="exampleInputEmail2" placeholder="Email address" required>
+		        </div>
+		        <div class="form-group">
+		           <label class="sr-only" for="exampleInputPassword2">Password</label>
+		           <input type="password" class="form-control champOnly" id="exampleInputPassword2" placeholder="Password" required ng-model="user.password">
+		           <input type="password" ng-show="state.mode=='inscription'" ng-model="password_check" class="form-control champOnly" placeholder="Password" required>
+		        </div>
+		        <div class="form-group">
+		           <button ng-show="state.mode =='connexion'" class="btn btn-block button-login champOnly" ng-click="email_login();$event.stopPropagation()">Login</button>
+		           <button ng-show="state.mode =='inscription'" class="btn btn-block button-login champOnly" ng-click="email_signin();$event.stopPropagation()">S'inscrire</button>
+			    </div>
+			    <div class="bottom text-center champOnly">
+			       <button class="btn btn-sm button-login socialButton" ng-click="state.mode = 'connexion';$event.stopPropagation()"><b>Se connecter</b></button>
+			       <button class="btn btn-sm button-login socialButton" ng-click="state.mode = 'inscription';$event.stopPropagation()"><b>S'inscrire</b></button>
+			    </div>
+			    <br>
+		  </div>
+	  </td>
+  </tr>
+  </table>
+  </div>
+              
+        
+
+
+	<!-- <h2 style = "margin-top: 120px">Connexion par email</h1>
 			<table class="connexion" align="center" style = "padding: 20px; margin-top: 10px;">
 				<tr style = "padding: 20px">
 					<td>
@@ -52,5 +104,5 @@
 		<div ng-repeat="card in user.cards">
 			<a class="card background" ng-class="card.background = '{{card._sender.template}}'" >
 
-		carte : {{card | json}}</a></div>
+		carte : {{card | json}}</a></div> -->
 </section>
