--- a/css/store.css
+++ b/css/store.css
@@ -1,20 +1,59 @@
-.card {
-	height: 100px;
-	width: 680px;
-
+.main-block{
+	height: 360px;
+	width: 600px;
 }
-.card.background{
-	
-	background-size: 100%;
-	background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 90px);
-		
-	
+.main-card{
+	height: 360px;
+	width: 600px;
 }
-.card.background.grad {
-	
+.avatar-block{
+	height: 300px;
+	width: 100%;
 }
 
+.avatar-div{
+	border-radius: 6px;
+	display:inline-block;
+	float:left;
+	margin: -30px 5px 0 8px;
+	max-width: 100%;
+	padding: 1px;
+	vertical-align: bottom;
+}
+.avatar-image{
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	z-index: 2;
+	/*height: 200px;width: 200px;
+	background-size: cover;
+	background-repeat: no-repeat;
+	border-radius: 50%;
+	border: 1px solid white;*/
+	overflow: hidden;
+}
+.user-avatar-infos{
+	height: 300px;
+	width: 100%;
+}
+.username{
+	height: 300px;
+	display: table-cell;
+	vertical-align: middle;
+	font-size: 18pt;
+}
+
+.social-list{
+	margin-left: 30px;
+	margin-bottom: 15px;
+}
+.card-actions{
+	width: 30px;
+	margin-top: 30px;
+	float: right;
+	margin-right: 10px;
+
+}
 .icon-action{
-	width: 20px;
-	height: 20px;
+	margin-top: 10px;
 }
