--- a/partials/signIn.html
+++ b/partials/signIn.html
@@ -1,7 +1,8 @@
 <div class="container">
 	<div class="row col-lg-5" id="rowSign">
 		<div class="row">
-			<div class="twPc-div">
+			<ivicard card="card" ></ivicard>
+			<!-- <div class="twPc-div">
 		    <a class="twPc-bg twPc-block"></a>
 				<div>
 					<div class="cardProfil">
@@ -21,7 +22,7 @@
 						<span>{{user.birth_date}}</span> 
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<div>
 				<a href="#/shop" class="btn btn-sg btn-default btn-block" id="buttonCard" type="button" >Choisir son fond de carte
                 </a>
