--- a/partials/login.html
+++ b/partials/login.html
@@ -2,13 +2,13 @@
 <div >
 <table class="fondInscrit">
 <tr >
-	<td class="left">
+	<td class="fond-left">
 	    <img class="logo" src="../img/icon-ivipulse.png">
 	</td>
-	<td class="middle">
+	<td class="fond-middle">
 		<img class="logoText" src="../img/ivipulse.png">
 	</td>
-	<td class="right">
+	<td class="fond-right">
 		<div class="champInscrit">
 		  	<br><br><br>
 		    <div class="text">Login via</div> 
