--- a/templates/aside.search.html
+++ b/templates/aside.search.html
@@ -1,4 +1,4 @@
-<div class="aside" tabindex="-1" role="dialog">
+<div class="aside contacts-aside" tabindex="-1">
   <div class="aside-dialog">
     <div class="aside-content">
       <div class="aside-header">
@@ -6,16 +6,41 @@
         <h4 class="aside-title">Contacts</h4>
       </div>
       <div class="aside-body">
-        <input ng-model="contacts_filter">
+        <div class="form-group">
+          <div class="input-group">
+            <span class="input-group-addon">
+              <span class="glyphicon glyphicon-search"></span>
+            </span>
+            <input class="form-control" ng-model="contacts_filter">
+            <br>
+          </div>
+        </div>
         <!-- <pre> {{cards | json }}</pre> -->
         <div class="card-container" ng-repeat="card in cards | searchContactsFilter:contacts_filter">
-          <ivicard card="card"></ivipulse>
+          <!-- <ivicard card="card"></ivipulse> -->
+          <div class="main-content">
+            <div class="container sous-main card background {{card._sender.template}}">
+              <div class="row">
+                <div class="col-xs-3">
+                  <div class="avatar-content">
+                    <div style="background-image:url({{card._sender.avatar}});height: 100px;width: 100px;background-size: cover;;background-repeat: no-repeat;border-radius: 50%;border: 1px solid white; overflow: hidden;margin-top:5px;" class="avatar-img">
+                    </div>
+                  </div>
+                </div>
+                <div class="col-xs-9">
+                  <div class="contact-infos">
+                    <br>
+                    <div class="infos-text">{{card._sender.first_name}} {{card._sender.last_name}}
+                    </div>
+                    <div class="infos-sup">Sociologue en chef</div>
+                    <div class="infos-sup">Bureau des renseignements généraux</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         
-      </div>
-      <div class="aside-footer">
-        <button type="button" class="btn btn-default" ng-click="$hide()">Close</button>
-        <button type="button" class="btn btn-primary" ng-click="$hide()">Save changes</button>
       </div>
     </div>
   </div>
