--- a/templates/aside.search.html
+++ b/templates/aside.search.html
@@ -15,30 +15,54 @@
             <br>
           </div>
         </div>
-        <!-- <pre> {{cards | json }}</pre> -->
-        <div class="card-container" ng-repeat="card in cards | searchContactsFilter:contacts_filter">
-          <!-- <ivicard card="card"></ivipulse> -->
-          <div class="main-content">
-            <div class="container sous-main card background {{card._sender.template}}">
-              <div class="row">
-                <div class="col-xs-3">
-                  <div class="avatar-content">
-                    <div style="background-image:url({{card._sender.avatar}});height: 100px;width: 100px;background-size: cover;;background-repeat: no-repeat;border-radius: 50%;border: 1px solid white; overflow: hidden;margin-top:5px;" class="avatar-img">
+        <div class="main-content">
+          <div class="container">
+            <div class="row">
+              <div class="SortByFilters">
+                <div class="col-xs-2">
+                  <div class="content-sortbyfilters">
+                    <span>A-Z</span>
+                  </div> 
+                </div>
+                <div class="col-xs-2">
+                  <div class="content-folders">
+                    <img src="img/svg/icon-folders.svg"/>
+                  </div>                  
+                </div>
+                <div class="col-xs-2">
+                  <div class="content-sortbyfilters">
+                    <span>Date</span>
+                  </div>                  
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="card-container" ng-repeat="card in cards | searchContactsFilter:contacts_filter">
+              <!-- <ivicard card="card"></ivipulse> -->
+
+                <div class="sous-main card background background-search {{card._sender.template}}">
+                
+                  <div class="col-xs-3">
+                    <div class="avatar-content">
+                      <div style="background-image:url({{card._sender.avatar}});height: 100px;width: 100px;background-size: cover;;background-repeat: no-repeat;border-radius: 50%;border: 1px solid white; overflow: hidden;margin-top:5px;" class="avatar-img">
+                      </div>
                     </div>
                   </div>
-                </div>
-                <div class="col-xs-9">
-                  <div class="contact-infos">
-                    <br>
-                    <div class="infos-text">{{card._sender.first_name}} {{card._sender.last_name}}
+                  <div class="col-xs-9">
+                    <div class="contact-infos">
+                      <br>
+                      <div class="infos-text">{{card._sender.first_name}} {{card._sender.last_name}}
+                      </div>
+                      <div class="infos-sup">Sociologue en chef</div>
+                      <div class="infos-sup">Bureau des renseignements généraux</div>
                     </div>
-                    <div class="infos-sup">Sociologue en chef</div>
-                    <div class="infos-sup">Bureau des renseignements généraux</div>
                   </div>
                 </div>
               </div>
             </div>
+          <!--fin div container -->
           </div>
+        <!--fin div main-content -->
         </div>
         
       </div>
