--- a/templates/aside.search.html
+++ b/templates/aside.search.html
@@ -51,7 +51,7 @@
                   <div class="col-xs-9">
                     <div class="contact-infos">
                       <br>
-                      <div class="infos-text">{{card._sender.first_name}} {{card._sender.last_name}}
+                      <div class="infos-text" align="left">{{card._sender.first_name}} {{card._sender.last_name}}
                       </div>
                       <div class="infos-sup">Sociologue en chef</div>
                       <div class="infos-sup">Bureau des renseignements généraux</div>
